# OS-ass1-scheduling

./: CMakeLists.txt  Makefile  README.md  _cat  _detachTest  _echo  _exitWait  _forktest  _grep  _helloW  _init  _kill  _ln  _ls  _mkdir  _pathTest  _pathTest1  _pathTest2.1  _pathTest2.2  _pathTest3  _pathTest4  _pathTest5  _policy  _policySysTest  _prioritySysTest  _quitXV6  _rm  _sanity  _schedulingTest1  _schedulingTest10  _schedulingTest11  _schedulingTest12  _schedulingTest13  _schedulingTest2  _schedulingTest3  _schedulingTest4  _schedulingTest5  _schedulingTest6  _schedulingTest7  _schedulingTest8  (+79 more)
Project_Test/: makefile
Project_Test/Tests/test_0/: Makefile  testInput.txt  testOutput.txt
Project_Test/Tests/test_1/: Makefile  testInput.txt
Project_Test/Tests/test_10/: testExpected.txt  testInput.txt
Project_Test/Tests/test_11/: testInput.txt
Project_Test/Tests/test_12/: testExpected.txt  testInput.txt
Project_Test/Tests/test_13/: testInput.txt
Project_Test/Tests/test_14/: Makefile  makefileCommandForDebug.txt  (+2 more)
Project_Test/XV6_Tests/: detachTest.c  exitWait.c  helloW.c  pathTest.c  pathTest1.c  pathTest2.1.c  pathTest2.2.c  pathTest3.c  pathTest4.c  pathTest5.c  policySysTest.c  prioritySysTest.c  quitXV6.c  schedulingTest1.c  schedulingTest10.c  schedulingTest11.c  schedulingTest12.c  schedulingTest13.c  schedulingTest2.c  schedulingTest3.c  schedulingTest4.c  schedulingTest5.c  schedulingTest6.c  schedulingTest7.c  schedulingTest8.c  schedulingTest9.c  usertests.c
Project_Test/include/: Tests.h
Project_Test/src/: ProjectTest.cpp  Tests.cpp
(+29 files in other folders)
