cmake_minimum_required(VERSION 3.13)
project(Assignment1)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(Assignment1
        asm.h
        ass1ds.cpp
        ass1ds.hpp
        bio.c
        bootmain.c
        buf.h
        cat.c
        console.c
        date.h
        defs.h
        echo.c
        elf.h
        exec.c
        fcntl.h
        file.c
        file.h
        forktest.c
        fs.c
        fs.h
        grep.c
        ide.c
        init.c
        ioapic.c
        kalloc.c
        kbd.c
        kbd.h
        kill.c
        lapic.c
        ln.c
        log.c
        ls.c
        main.c
        memide.c
        memlayout.h
        mkdir.c
        mkfs.c
        mmu.h
        mp.c
        mp.h
        param.h
        picirq.c
        pipe.c
        printf.c
        proc.c
        proc.h
        rm.c
        schedulinginterface.h
        sh.c
        sleeplock.c
        sleeplock.h
        spinlock.c
        spinlock.h
        stat.h
        stressfs.c
        string.c
        syscall.c
        syscall.h
        sysfile.c
        sysproc.c
        trap.c
        traps.h
        types.h
        uart.c
        ulib.c
        umalloc.c
        user.h
        vm.c
        wc.c
        x86.h
        zombie.c
        tmp.c
        sanity.c)
